Got Search working

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                 President: <a href="mailto:president@grha-dayton.org?subject=GRHA Business">
                     Diana Schaefer</a> (937) 684-5530 <br>email: <b>president@grha-dayton.org</b>
                 <br>Treasurer: <a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">
-                    Misty Wilker</a> (937) 554-9414 <br>email: <b>treasurer@grha-dayton.org</b>
+                Roy Rossow</a> 937-430-2472 <br>email: <b>treasurer@grha-dayton.org</b>
                 <a data-bs-toggle="modal" href="#MapModal" class="d-none d-sm-block"> 
                     <img src="Media/images/grhamap.jpg" width="80%"/>
                 </a>
@@ -176,11 +176,9 @@
             All questions regarding the status of dues payments and/or liens on
             a particular property should be directed to our Treasurer,
             <a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">
-                <b>Misty Wilker</b></a>, (937) 554-9414, email: <b>treasurer@grha-dayton.org</b>
+                <b>Roy Rossow</b></a>, 937-430-2472, email: <b>treasurer@grha-dayton.org</b>
             <br>
-            Email contact is preferred and usually the best way to get her. Like most of the board,
-            she has a full time day job, so don't expect an answer immediately.
-    
+            Email is preferred and usually the best way to contact.
             <div class="card bg-light m-2 " style="max-width: 20rem;">
                 <div class="card-body">
                         Gander Road Homeowners Association </br>P.O. Box 24763 </br>Dayton, OH 45424-4763
@@ -234,12 +232,11 @@
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
                     <div class="card-body">
-                        <img class="float-start rounded mx-2" src="Media/images/TrusteePhotos/Misty-headshot.jpg"
-                            width="100" />
-                        <h5>Misty Wilker - Treasurer</h5>
-                        <h6>937-554-9414</h6>
+                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
+                        <h5>Roy Rossow - Treasurer</h5>
+                        <h6>937-430-2472</h6>
                         <h6><a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">treasurer@grha-dayton.org</a></h6>
-                        Misty is our Non-Trustee Treasurer who takes care of dues and liens
+                        Roy is our Non-Trustee Treasurer who takes care of dues and liens
                     </div>
                 </div>
             </div>
@@ -313,8 +310,10 @@
             <i class="fa fa-dollar "></i> Why do I have to pay dues</a>
         <a class="btn btn-success mt-2" href="Media/Docs/GRHA%20Dues%20and%20Liens.pdf" target="_blank">
             <i class="fa fa-dollar "></i> Dues and Lien info</a>
-
-        <div class="row">
+        <a class="btn btn-success mt-2" href="Media/Docs/2024%20GRHA%20Collection%20Policy.pdf" target="_blank">
+                <i class="fa fa-dollar "></i> 2024 Collection Policy</a>
+    
+        <div class="row mt-2">
             <div class="col-sm-4 col-md-3">
                 <h5>Dues Checker</h5>
                 <div id="DuesSearchInput">
@@ -457,11 +456,10 @@
                 <div class="modal-body">
                     All questions regarding the status of dues payments and/or liens on
                     a particular property should be directed to our Treasurer, <a
-                        href="mailto:treasurer@grha-dayton.org?subject=GRHA Business"><b>Misty
-                            Wilker</b></a>, (937) 554-9414, email: <b>treasurer@grha-dayton.org</b> <br>
+                    href="mailto:treasurer@grha-dayton.org?subject=GRHA Business"><b>Roy Rossow</b></a>
+                    , 937-430-2472, email: <b>treasurer@grha-dayton.org</b> <br>
                     <br> Email contact is preferred and usually the best way to
-                    get her. Like most of the board, she has a full time day job, so
-                    don't expect an answer immediately. <br>
+                    get him. <br>
                     <br> Click <b>Contact Us</b> on the top menu for the contact
                     information of the entire GRHA Board of Trustees.
                     <div class="card bg-light m-3" style="max-width: 20rem;">
@@ -582,7 +580,7 @@
                     <h6>The PayPal button will be on the statement for you to pay
                         online as long as the only outstanding amount is the current
                         year's dues. You do not need a PayPal account to use the online payment service
-                        but the GRHA adds a $4.50 service fee to cover processing fees from Paypal.
+                        but the GRHA adds a service fee to cover processing fees from Paypal.
                     </h6>
                     <h6 class="btn-warning">
                         IF you have liens and/or past due assessments:
