Working on Detail display

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -90,8 +90,9 @@
 
     					<div class="col-xs-7 col-sm-7">
 	                		<h5 class="mt-2">Property Detail</h5>
+
 	                		<table class="table table-sm">
-	                  			<tbody id="PropertyDetailTBody">
+	                  			<tbody id="PropertyDetailTbody">
 	                  			</tbody>
 	                		</table>
 						</div>
@@ -102,12 +103,12 @@
 				  <div class="col-sm-7 col-md-8">
 				  		<h5 class="mt-2">Owners</h5>
 				                <table id="PropertyOwners" class="table table-striped table-sm">
-				                  <tbody>
+				                  <tbody id="PropertyOwnersTbody">
 				                  </tbody>
 				                </table>
 				    	<h5 class="mt-2">Assessments</h5>
 				                <table id="PropertyAssessments" class="table table-striped table-sm">
-				                  <tbody>
+				                  <tbody id="PropertyAssessmentsTbody">
 				                  </tbody>
 				                </table>
 				  </div>
@@ -229,7 +230,7 @@
 
 	</div><!-- end of main tab content -->
 
-		<div id="MessageDisplay"></div>
+		<div id="MessageDisplay" class="m-2"></div>
 
     </div><!-- end of main container -->
 
