working on detail

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -95,6 +95,30 @@
 
 	                		<table class="table table-sm">
 	                  			<tbody id="PropertyDetailTbody">
+
+									<tr><th>Parcel Id:</th><td id="Parcel_ID"></td></tr>
+									<tr><th>Lot No:</th><td id="LotNo"></td></tr>
+									<tr><th>Location: </th><td id="Parcel_Location"></td></tr>
+
+									<tr><th class="d-none d-md-table-cell">Street No: </th><td class="d-none d-md-table-cell" id="Property_Street_No"></td></tr>
+									<tr><th class="d-none d-md-table-cell">Street Name: </th><td class="d-none d-md-table-cell" id="Property_Street_Name"></td></tr>
+									<tr><th class="d-none d-md-table-cell">City: </th><td class="d-none d-md-table-cell" id="Property_City"></td></tr>
+									<tr><th class="d-none d-md-table-cell">State: </th><td class="d-none d-md-table-cell" id="Property_State"></td></tr>
+									<tr><th class="d-none d-md-table-cell">Zip Code: </th><td class="d-none d-md-table-cell" id="Property_Zip"></td></tr>
+									<tr><th>Total Due: </th><td id="TotalDue"></td></tr>
+						
+									<!--
+									<tr><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Rental) + '</td></tr>';
+									<tr><th class="d-none d-md-table-cell">Managed: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Managed) + '</td></tr>';
+									<tr><th class="d-none d-md-table-cell">Foreclosure: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Foreclosure) + '</td></tr>';
+									<tr><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Bankruptcy) + '</td></tr>';
+									<tr><th class="d-none d-md-table-cell">ToBe Released: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Liens_2B_Released) + '</td></tr>';
+									<tr><th>Use Email: </th><td>' + util.setCheckbox(hoaRec.UseEmail) + '</td></tr>';
+									-->
+									<tr><th>Comments: </th><td>
+										<input type="text" class="form-control form-control-sm m-1 shadow-none" id="Comments" placeholder="Comments">
+									</td></tr>
+						
 	                  			</tbody>
 	                		</table>
 						</div>
