--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -93,34 +93,50 @@
     					<div class="col-xs-7 col-sm-7">
 	                		<h5 class="mt-2">Property Detail</h5>
 
-	                		<table class="table table-sm">
-	                  			<tbody id="PropertyDetailTbody">
+	                		<table class="table table-striped table-sm table-borderless">
+								<tbody id="PropertyDetailTbody">
 
-									<tr><th>Parcel Id:</th><td id="Parcel_ID"></td></tr>
-									<tr><th>Lot No:</th><td id="LotNo"></td></tr>
-									<tr><th>Location: </th><td id="Parcel_Location"></td></tr>
 
-									<tr><th class="d-none d-md-table-cell">Street No: </th><td class="d-none d-md-table-cell" id="Property_Street_No"></td></tr>
-									<tr><th class="d-none d-md-table-cell">Street Name: </th><td class="d-none d-md-table-cell" id="Property_Street_Name"></td></tr>
-									<tr><th class="d-none d-md-table-cell">City: </th><td class="d-none d-md-table-cell" id="Property_City"></td></tr>
-									<tr><th class="d-none d-md-table-cell">State: </th><td class="d-none d-md-table-cell" id="Property_State"></td></tr>
-									<tr><th class="d-none d-md-table-cell">Zip Code: </th><td class="d-none d-md-table-cell" id="Property_Zip"></td></tr>
-									<tr><th>Total Due: </th><td id="TotalDue"></td></tr>
+									<tr class="m-0 p-0"><th>Parcel Id:</th><td id="Parcel_ID">xxxxxxxxxxx</td></tr>
+									<tr class="m-10 p-10 small"><th>Lot No:</th><td id="LotNo">12345</td></tr>
+									<tr class="m-0 p-0"><th>Location: </th><td id="Parcel_Location"></td></tr>
+
+									<tr class="small"><th class="d-none d-md-table-cell">Street No: </th><td class="d-none d-md-table-cell" id="Property_Street_No"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Street Name: </th><td class="d-none d-md-table-cell" id="Property_Street_Name"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">City: </th><td class="d-none d-md-table-cell" id="Property_City"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">State: </th><td class="d-none d-md-table-cell" id="Property_State"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Zip Code: </th><td class="d-none d-md-table-cell" id="Property_Zip"></td></tr>
+									<tr class="small"><th>Total Due: </th><td id="TotalDue"></td></tr>
 						
-									<!--
-									<tr><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Rental) + '</td></tr>';
-									<tr><th class="d-none d-md-table-cell">Managed: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Managed) + '</td></tr>';
-									<tr><th class="d-none d-md-table-cell">Foreclosure: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Foreclosure) + '</td></tr>';
-									<tr><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Bankruptcy) + '</td></tr>';
-									<tr><th class="d-none d-md-table-cell">ToBe Released: </th><td class="d-none d-md-table-cell">' + util.setCheckbox(hoaRec.Liens_2B_Released) + '</td></tr>';
-									<tr><th>Use Email: </th><td>' + util.setCheckbox(hoaRec.UseEmail) + '</td></tr>';
-									-->
-									<tr><th>Comments: </th><td>
-										<input type="text" class="form-control form-control-sm m-1 shadow-none" id="Comments" placeholder="Comments">
+									<tr class="small"><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">
+										<input type="checkbox" class="form-control form-control-sm m-1 shadow-none" id="Rental" checked="false" disabled>
+									</td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Managed: </th><td class="d-none d-md-table-cell">
+										<input type="checkbox" class="form-control form-control-sm m-1 shadow-none" id="Managed" checked="false" disabled>
+									</td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Foreclosure: </th><td class="d-none d-md-table-cell">
+										<input type="checkbox" class="form-control form-control-sm m-1 shadow-none" id="Foreclosure" checked="false" disabled>
+									</td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">
+										<input type="checkbox" class="form-control form-control-sm m-1 shadow-none" id="Bankruptcy" checked="false" disabled>
+									</td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">ToBe Released: </th><td class="d-none d-md-table-cell">
+										<input type="checkbox" class="form-control form-control-sm m-1 shadow-none" id="Liens_2B_Released" checked="false" disabled="disabled">
+									</td></tr>
+									<tr  class="small"><th>Use Email: </th><td>
+										<!--
+										<input type="checkbox" class="form-control form-control-sm form-check-input m-1 shadow-none" id="UseEmail" checked=true >
+										-->
+											<input class="form-check-input" type="checkbox" id="check1" name="option1" value="something" checked>
+											<label class="form-check-label">Option 1</label>
+									</td></tr>
+									<tr  class="small"><th>Comments: </th><td>
+										<input type="text" class="form-control form-control-sm m-1 shadow-none" id="Comments">
 									</td></tr>
 						
 	                  			</tbody>
 	                		</table>
+
 						</div>
 
 		        	</div><!-- row -->
