--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -48,7 +48,9 @@
                     <h5>Search</h5>
 					<form>
                     	<input type="text" class="form-control form-control-sm m-1 shadow-none" name="searchStr"  	id="searchStr" 	placeholder="Enter value to search">
-                    	<button id="SearchButton" type="button" class="btn btn-primary mt-2 mb-2">Search</button>
+                    	<button id="SearchButton" type="button" class="btn btn-primary mt-2 mb-2">
+							<i class="fa fa-search me-1"></i> Search
+						</button>
 						<!--
                     	<button id="AdvancedOptionsButton" type="button" class="btn btn-info mt-2 ml-2 mb-2" data-bs-toggle="collapse" data-bs-target="#AdvancedSearchOptions">Advanced Options</button>
 						<div id="AdvancedSearchOptions" class="collapse">
@@ -94,43 +96,38 @@
 	                		<h5 class="mt-2">Property Detail</h5>
 
 	                		<table class="table table-sm table-borderless">
-								<tbody id="PropertyDetailTbody">
-
-									<tr class="small"><th>Parcel Id:</th><td id="Parcel_ID">xxxxxxxxxxx</td></tr>
-									<tr class="small"><th>Lot No:</th><td id="LotNo">12345</td></tr>
-
-									<tr class="small"><th class="d-none d-md-table-cell">Street No: </th><td class="d-none d-md-table-cell" id="Property_Street_No"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Street Name: </th><td class="d-none d-md-table-cell" id="Property_Street_Name"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">City: </th><td class="d-none d-md-table-cell" id="Property_City"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">State: </th><td class="d-none d-md-table-cell" id="Property_State"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Zip Code: </th><td class="d-none d-md-table-cell" id="Property_Zip"></td></tr>
+								<tbody>
+									<tr class="small"><th>Parcel Id:</th><td id="Parcel_ID"></td></tr>
+									<tr class="small"><th>Lot No:</th><td id="LotNo"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Street No: </th><td id="Property_Street_No" class="d-none d-md-table-cell"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Street Name: </th><td id="Property_Street_Name" class="d-none d-md-table-cell"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">City: </th><td id="Property_City" class="d-none d-md-table-cell"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">State: </th><td id="Property_State" class="d-none d-md-table-cell"></td></tr>
+									<tr class="small"><th class="d-none d-md-table-cell">Zip Code: </th><td id="Property_Zip" class="d-none d-md-table-cell"></td></tr>
 									<tr class="small"><th>Total Due: </th><td id="TotalDue"></td></tr>
-						
 									<tr class="small"><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">
-										<input type="checkbox" class="form-check-input shadow-none" id="Rental" checked="false" disabled>
+										<input id="Rental" type="checkbox" class="form-check-input shadow-none">
 									</td></tr>
 									<tr class="small"><th class="d-none d-md-table-cell">Managed: </th><td class="d-none d-md-table-cell">
-										<input type="checkbox" class="form-check-input shadow-none" id="Managed" checked="false" disabled>
+										<input id="Managed" type="checkbox" class="form-check-input shadow-none">
 									</td></tr>
 									<tr class="small"><th class="d-none d-md-table-cell">Foreclosure: </th><td class="d-none d-md-table-cell">
-										<input type="checkbox" class="form-check-input shadow-none" id="Foreclosure" checked="false" disabled>
+										<input id="Foreclosure" type="checkbox" class="form-check-input shadow-none">
 									</td></tr>
 									<tr class="small"><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">
-										<input type="checkbox" class="form-check-input shadow-none" id="Bankruptcy" checked="false" disabled>
+										<input id="Bankruptcy" type="checkbox" class="form-check-input shadow-none">
 									</td></tr>
 									<tr  class="small"><th>Use Email: </th><td>
-										<!--
-										<input type="checkbox" class="form-control form-control-sm form-check-input m-1 shadow-none" id="UseEmail" checked=true >
-										-->
-										<input class="form-check-input shadow-none" type="checkbox" id="check1" name="option1" value="something" checked>
+										<input id="UseEmail" class="form-check-input shadow-none" type="checkbox">
 									</td></tr>
 									<tr  class="small"><th>Comments: </th><td>
-										<textarea class="form-control shadow-none" id="Comments" rows="4"></textarea>
+										<textarea id="Comments" class="form-control shadow-none" rows="3"></textarea>
 									</td></tr>
-						
 	                  			</tbody>
 	                		</table>
-
+							<button id="PropertyUpdateButton" type="button" class="btn btn-success">
+								<i class="fa fa-floppy-o me-1"></i> Save
+							</button>
 						</div>
 
 		        	</div><!-- row -->
@@ -447,10 +444,6 @@
     <script src="js/main.js" type="module"></script>
 
 	<!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js" type="text/javascript"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap-add-clear@1.0.7/bootstrap-add-clear.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.js"></script>
-
     <script src="js/util.js?ver=2.019"></script>
 	<script src="js/config.js?ver=2.016"></script>
 	<script src="js/search.js?ver=2.016"></script>
