detail data and buttons

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -86,15 +86,26 @@
 
 				  		<div class="col-xs-5 col-sm-5">
 			             	<h5>Detail</h5>
-
 							<div id="DetailMessageDisplay" class="m-2"></div>
-
-		                  	<div id="MCTreasLink"></div>
-		                  		<div id="MCAuditorLink"></div>
-		                  		<div id="DuesStatement"></div>
-		                  		<div id="NewOwner"></div>
-		                  		<div id="Communications"></div>
-		                  	<div id="AddAssessment"></div>
+							<a id="MCTreasLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
+								County<br>Treasurer
+							</a>
+							<a id="MCAuditorLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
+								County<br>Property
+							</a>
+							<a id="DuesStatementButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-success mr-1 mb-1 float-left" role="button">
+								Dues Statement
+							</a>
+							<a id="NewOwnerButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-warning mr-1 mb-1 float-left" role="button">
+								New Owner
+							</a>
+							<a id="CommunicationsButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-info mr-1 mb-1 float-left" role="button">
+								Communications
+							</a>
+							<!--
+		                  	<div id="AddAssessment">
+							</div>
+							-->
 		            	</div>
 
     					<div class="col-xs-7 col-sm-7">
