got owner list working

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -151,15 +151,15 @@
 
 				  <div class="col-sm-7 col-md-8">
 				  		<h5 class="mt-2">Owners</h5>
-				                <table id="PropertyOwners" class="table table-striped table-sm">
-				                  <tbody id="PropertyOwnersTbody">
-				                  </tbody>
-				                </table>
+				        <table class="table table-striped">
+				            <tbody id="PropertyOwnersTbody">
+				            </tbody>
+				        </table>
 				    	<h5 class="mt-2">Assessments</h5>
-				                <table id="PropertyAssessments" class="table table-striped table-sm">
-				                  <tbody id="PropertyAssessmentsTbody">
-				                  </tbody>
-				                </table>
+				        <table class="table table-striped table-sm">
+				            <tbody id="PropertyAssessmentsTbody">
+				            </tbody>
+				        </table>
 				  </div>
 			</div><!-- row -->
 		</div><!-- end of Detail -->
