--- a/src/index.html
+++ b/src/index.html
@@ -69,10 +69,12 @@
                 <div class="d-none d-sm-block">
                     <img id="HomePhoto" class="rounded mb-2 ml-2" src="Media/images/Home/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
                 </div>
-                President: <a href="mailto:president@grha-dayton.org?subject=GRHA Business">
-                    Diana Schaefer</a> (937) 684-5530 <br>email: <b>president@grha-dayton.org</b>
-                <br>Treasurer: <a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">
-                Roy Rossow</a> 937-430-2472 <br>email: <b>treasurer@grha-dayton.org</b>
+                President: <b><span class="PresidentName"></span></b>
+                , <span class="PresidentPhone"></span>
+                <br>email: <a class="PresidentEmail" href=""></a>
+                <br>Treasurer: <b><span class="TreasurerName"></span></b>
+                , <span class="TreasurerPhone"></span>
+                <br>email: <a class="TreasurerEmail" href=""></a>
                 <a data-bs-toggle="modal" href="#MapModal" class="d-none d-sm-block"> 
                     <img src="Media/images/grhamap.jpg" width="80%"/>
                 </a>
@@ -242,20 +244,24 @@
         <div class="m-2">
             All questions regarding the status of dues payments and/or liens on
             a particular property should be directed to our Treasurer,
-            <a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">
-                <b>Roy Rossow</b></a>, 937-430-2472, email: <b>treasurer@grha-dayton.org</b>
-            <br>
-            Email is preferred and usually the best way to contact.
+            <p>
+                <b><span class="TreasurerName"></span></b>
+                , phone: <span class="TreasurerPhone"></span>
+                , email: <a class="TreasurerEmail" href=""></a>
+                , Email is preferred and usually the best way to contact.
+            </p>
             <div class="card bg-light m-2 " style="max-width: 20rem;">
                 <div class="card-body">
-                        Gander Road Homeowners Association </br>P.O. Box 24763 </br>Dayton, OH 45424-4763
+                    Gander Road Homeowners Association </br>P.O. Box 24763 </br>Dayton, OH 45424-4763
                 </div>
             </div>
-    
         </div>
 
         <h5 class="mt-3">Board of Trustees</h5>
+        <div id="BoardRow" class="row">
+        </div>
 
+        <!--
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
@@ -287,9 +293,6 @@
                         <i class="fa fa-user fa-5x mx-2 "></i>
                         <h5>Open position - Secretary</h5>
                         <h6></h6>
-                        <!--
-                        <h6><a href="mailto:secretary@grha-dayton.org?subject=GRHA Business">secretary@grha-dayton.org</a></h6>
-                        -->
                     </div>
                 </div>
             </div>
@@ -370,6 +373,8 @@
                 </div>
             </div>
         </div>
+        -->
+
     </div><!-- end of Contacts tab -->
 
     <div class="tab-pane" role="tabpanel"  id="DuesPage">
@@ -522,12 +527,12 @@
     
                 <div class="modal-body">
                     All questions regarding the status of dues payments and/or liens on
-                    a particular property should be directed to our Treasurer, <a
-                    href="mailto:treasurer@grha-dayton.org?subject=GRHA Business"><b>Roy Rossow</b></a>
-                    , 937-430-2472, email: <b>treasurer@grha-dayton.org</b> <br>
-                    <br> Email contact is preferred and usually the best way to
-                    get him. <br>
-                    <br> Click <b>Contact Us</b> on the top menu for the contact
+                    a particular property should be directed to our Treasurer, 
+                    <b><span class="TreasurerName"></span></b>
+                    , phone: <span class="TreasurerPhone"></span>
+                    , email: <a class="TreasurerEmail" href=""></a>
+                    <p>Email is preferred and usually the best way to contact</p>                    
+                    Click <b>Contact Us</b> on the top menu for the contact
                     information of the entire GRHA Board of Trustees.
                     <div class="card bg-light m-3" style="max-width: 20rem;">
                         <div class="card-body">
@@ -652,7 +657,7 @@
                     <h6 class="btn-warning">
                         IF you have liens and/or past due assessments:
                     </h6>
-                    <h6>Please contact the treasurer at treasurer@grha-dayton.org
+                    <h6>Please contact the treasurer at <a class="TreasurerEmail" href=""></a>
                         for a PayPal invoice if you would like to pay outstanding dues online, however
                         there is a processing fee added by PayPal for this special invoice
                     </h6>
