Got Trustee display done

--- a/src/index.html
+++ b/src/index.html
@@ -70,10 +70,10 @@
                     <img id="HomePhoto" class="rounded mb-2 ml-2" src="Media/images/Home/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
                 </div>
                 President: <b><span class="PresidentName"></span></b>
-                , <span class="PresidentPhone"></span>
+                <span class="PresidentPhone"></span>
                 <br>email: <a class="PresidentEmail" href=""></a>
                 <br>Treasurer: <b><span class="TreasurerName"></span></b>
-                , <span class="TreasurerPhone"></span>
+                <span class="TreasurerPhone"></span>
                 <br>email: <a class="TreasurerEmail" href=""></a>
                 <a data-bs-toggle="modal" href="#MapModal" class="d-none d-sm-block"> 
                     <img src="Media/images/grhamap.jpg" width="80%"/>
@@ -246,9 +246,9 @@
             a particular property should be directed to our Treasurer,
             <p>
                 <b><span class="TreasurerName"></span></b>
-                , phone: <span class="TreasurerPhone"></span>
-                , email: <a class="TreasurerEmail" href=""></a>
-                , Email is preferred and usually the best way to contact.
+                phone: <span class="TreasurerPhone"></span>
+                email: <a class="TreasurerEmail" href=""></a>
+                Email is preferred and usually the best way to contact.
             </p>
             <div class="card bg-light m-2 " style="max-width: 20rem;">
                 <div class="card-body">
@@ -258,41 +258,22 @@
         </div>
 
         <h5 class="mt-3">Board of Trustees</h5>
-        <div id="BoardRow" class="row">
-        </div>
-
-        <!--
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <img class="float-start rounded mx-2" src="Media/images/TrusteePhotos/Diana-headshot.jpg" width="100" />
-                        <h5>Diana Schaefer - President</h5>
-                        <h6>937-684-5530</h6>
-                        <h6><a href="mailto:president@grha-dayton.org?subject=GRHA Business">president@grha-dayton.org</a></h6>
-                        Diana is the President and member of the Nominating Committee.  Contact for Architectural control Guidelines 
-                        Volunteer opportunities, and Resident concerns
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Chris Keppler - Vice-President</h5>
-                        <h6>314-910-1193</h6>
-                        <h6><a href="mailto:vp@grha-dayton.org?subject=GRHA Business">vp@grha-dayton.org</a></h6>
-                        Chair of the Public Relations Committee - Contact regarding any GRHA sponsored events including 
-                        the Easter Event, Garage Sale, Christmas decorating contest, and Halloween Event
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 "></i>
-                        <h5>Open position - Secretary</h5>
-                        <h6></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
@@ -301,32 +282,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Roy Rossow - Treasurer</h5>
-                        <h6>937-430-2472</h6>
-                        <h6><a href="mailto:treasurer@grha-dayton.org?subject=GRHA Business">treasurer@grha-dayton.org</a></h6>
-                        Roy is our Non-Trustee Treasurer who takes care of dues and liens
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <img class="float-start rounded mx-2" src="Media/images/TrusteePhotos/Gordon-headshot.jpg" width="100" />
-                        <h5>Gordon Carlson - Trustee</h5>
-                        <h6>937-236-1927</h6>
-                        <h6><a href="mailto:gordon@grha-dayton.org?subject=GRHA Business">gordon@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Cassie Ward - Trustee</h5>
-                        <h6>919-753-8437</h6>
-                        <h6><a href="mailto:cassie@grha-dayton.org?subject=GRHA Business">cassie@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
@@ -335,28 +303,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Jeff Blair - Trustee</h5>
-                        <h6><a href="mailto:jeff@grha-dayton.org?subject=GRHA Business">jeff@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Cheryl Wills - Trustee</h5>
-                        <h6><a href="mailto:cheryl@grha-dayton.org?subject=GRHA Business">cheryl@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Jesse Loney - Trustee</h5>
-                        <h6><a href="mailto:jesse@grha-dayton.org?subject=GRHA Business">jesse@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
@@ -365,15 +324,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card bg-light mb-2">
-                    <div class="card-body">
-                        <i class="fa fa-user fa-5x mx-2 float-start"></i>
-                        <h5>Andrea Loney - Trustee</h5>
-                        <h6><a href="mailto:andrea@grha-dayton.org?subject=GRHA Business">andrea@grha-dayton.org</a></h6>
+                    <div class="card-body Trustee">
                     </div>
                 </div>
             </div>
         </div>
-        -->
 
     </div><!-- end of Contacts tab -->
 
@@ -529,8 +484,8 @@
                     All questions regarding the status of dues payments and/or liens on
                     a particular property should be directed to our Treasurer, 
                     <b><span class="TreasurerName"></span></b>
-                    , phone: <span class="TreasurerPhone"></span>
-                    , email: <a class="TreasurerEmail" href=""></a>
+                    phone: <span class="TreasurerPhone"></span>
+                    email: <a class="TreasurerEmail" href=""></a>
                     <p>Email is preferred and usually the best way to contact</p>                    
                     Click <b>Contact Us</b> on the top menu for the contact
                     information of the entire GRHA Board of Trustees.
