--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Gander Road Homeowners Association" />
     <meta property="og:description" content="This is the web site for the Gander Road Homeowners Association" />
-    <meta property="og:image" content="https://grha-dayton.org/Media/images/qh-sign.jpg" />
+    <meta property="og:image" content="https://grha-dayton.org/https://grhawebstorage.blob.core.windows.net/images/qh-sign.jpg" />
     
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico?ver=1.003">
@@ -29,7 +29,7 @@
 
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
-    <a class="navbar-brand p-0 mx-2" href="/"><img class="m-0 p-0" id="header-image" alt="Brand logo photo" src="Media/images/logo-photo.jpg"></a>
+    <a class="navbar-brand p-0 mx-2" href="/"><img class="m-0 p-0" id="header-image" alt="Brand logo photo" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"></a>
     <a class="navbar-brand d-lg-none" data-bs-toggle="modal" href="#aboutModal">Gander Rd HOA</a>
     <a class="navbar-brand d-none d-lg-block" data-bs-toggle="modal" href="#aboutModal">Gander Road Homeowners Association</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -67,7 +67,7 @@
                 <div id="DisplayWidth"></div>
                 <h4 class="d-none d-sm-block">Home</h4>
                 <div class="d-none d-sm-block">
-                    <img id="HomePhoto" class="rounded mb-2 ml-2" src="Media/images/Home/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
+                    <img id="HomePhoto" class="rounded mb-2 ml-2" src="https://grhawebstorage.blob.core.windows.net/images/QH-sign.JPG" alt="Quail Hollow sign" width="65%" />
                 </div>
                 President: <b><span class="PresidentName"></span></b>
                 <span class="PresidentPhone"></span>
@@ -76,7 +76,7 @@
                 <span class="TreasurerPhone"></span>
                 <br>email: <a class="TreasurerEmail" href=""></a>
                 <a data-bs-toggle="modal" href="#MapModal" class="d-none d-sm-block"> 
-                    <img src="Media/images/grhamap.jpg" width="80%"/>
+                    <img src="https://grhawebstorage.blob.core.windows.net/images/grhamap.jpg" width="80%"/>
                 </a>
             </div><!-- End of col 1 -->
 
@@ -151,16 +151,16 @@
                     <h6>3rd Place - 4525 Falcon Circle</h6>
                 </div>
                 <div class="float-start">
-                    <img class="mr-1" alt="Christmas winner 1st place" src="Media/images/Christmas/1.jpg" width="30%">
-                    <img class="mr-1" alt="Christmas winner 2nd place" src="Media/images/Christmas/2.jpg" width="30%">
-                    <img class="mr-1" alt="Christmas winner 34d place" src="Media/images/Christmas/3.jpg" width="30%">
+                    <img class="mr-1" alt="Christmas winner 1st place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/1.jpg" width="30%">
+                    <img class="mr-1" alt="Christmas winner 2nd place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/2.jpg" width="30%">
+                    <img class="mr-1" alt="Christmas winner 34d place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/3.jpg" width="30%">
                 </div>
                 
                 <h6 class="my-2">2023 Easter Egg Hunt Event</h6>
                 <div class="float-start">
-                    <img class="mr-1" alt="Easter Egg Hunt 1" src="Media/images/Easter/1.jpg" width="30%">
-                    <img class="mr-1" alt="Easter Egg Hunt 2" src="Media/images/Easter/2.jpg" width="30%">
-                    <img class="mr-1" alt="Easter Egg Hunt 3" src="Media/images/Easter/3.jpg" width="30%">
+                    <img class="mr-1" alt="Easter Egg Hunt 1" src="https://grhawebstorage.blob.core.windows.net/images/Easter/1.jpg" width="30%">
+                    <img class="mr-1" alt="Easter Egg Hunt 2" src="https://grhawebstorage.blob.core.windows.net/images/Easter/2.jpg" width="30%">
+                    <img class="mr-1" alt="Easter Egg Hunt 3" src="https://grhawebstorage.blob.core.windows.net/images/Easter/3.jpg" width="30%">
                 </div>
                 -->
 
@@ -180,12 +180,13 @@
                 </div>
 
                 <div class="float-start my-2">
-                    The GRHA Board of Trustees meets the 2nd Thursday of every month
-                    at 7:00pm at the city of Dayton Fire Station #12 on Brandt Pike (just south of Needmore).
+                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Library Conference Room</b>. 
                     This meeting is open to all members of the GRHA.
-                    <a href="https://www.google.com/maps/place/Dayton+Fire+Station+12/@39.8128367,-84.1327829,17.92z/data=!4m5!3m4!1s0x88408292a3ee62af:0xc779418e7a93efd7!8m2!3d39.8136226!4d-84.1325705?hl=en" target="_blank">
-                        <b>(Click here for map to Fire Station #12)</b>
-                    </a>
+                    <p>
+                        <a href="https://www.google.com/maps/place/Dayton+Metro+Library+-+Huber+Heights+Branch/@39.843046,-84.1196126,17z/data=!4m14!1m7!3m6!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!2sDayton+Metro+Library+-+Huber+Heights+Branch!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6!3m5!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                            <b>(Click here for map to Dayton Metro Library - Huber Heights)</b>
+                        </a>
+                    </p>
                     <h6>Meeting Minutes can be found in the Quail Call newsletter</h6>
                 </div>
 
@@ -193,7 +194,7 @@
 
             <div class="col-sm-4 col-lg-3">
                 <div class="d-none d-sm-block">
-                    <img id="CurrentPhoto" src="Media/images/Current/2012-07-10 092.JPG" class="rounded float-start m-2"  width="80%" alt="gander road current photo"/>
+                    <img id="CurrentPhoto" src="https://grhawebstorage.blob.core.windows.net/photos/2012-07-10 092.JPG" class="rounded float-start m-2"  width="80%" alt="gander road current photo"/>
                 </div>
                 <div>
                     <!--
@@ -208,9 +209,9 @@
                 <a data-bs-toggle="modal" href="#PrivacyModal"><i class="fa fa-briefcase"></i> privacy policy</a>
                 </p>
                 <a target="_blank" class="mt-1" href="http://www.facebook.com/GanderRoadHomeownersAssoc">
-                    <img alt="Find us on facebook" src="Media/images/Facebook.png" width="45%"></a>
+                    <img alt="Find us on facebook" src="https://grhawebstorage.blob.core.windows.net/images/Facebook.png" width="45%"></a>
                 <a target="_blank" class="mt-1" href="https://nextdoor.com/invite/skbhbhwcackpbjrwkuhd">
-                    <img alt="Find us on nextdoor" src="Media/images/nextdoor-badge.png" width="45%"></a>
+                    <img alt="Find us on nextdoor" src="https://grhawebstorage.blob.core.windows.net/images/nextdoor-badge.png" width="45%"></a>
 
                 <a class="btn btn-sm btn-primary float-start mt-2 mr-2 link-tile-sm d-block d-lg-none" href="#eventModal"data-bs-toggle="modal">
                     <i class="fa fa-calendar fa-2x float-start"></i> Events / <br>Calendar</a>
@@ -223,22 +224,6 @@
     <div class="tab-pane" role="tabpanel" id="MediaPage">
         <div id="MediaPageMessage"></div>
 	</div><!-- end of Media -->
-    <!--
-    <div class="tab-pane" role="tabpanel"  id="MediaPage">
-        <div class="row">
-            <div class="col-sm-5 col-md-3 d-none d-sm-block">
-                <h4 id=MediaHeader></h4>
-                <div id="MediaMenu" class="panel-group"></div>
-            </div>
-            <div class="col-sm-7 col-md-9">
-                <div id="MediaConfig" class="float-right m-2"></div>
-                <ol id="MediaBreadcrumbs" class="breadcrumb mt-2 p-1"></ol>
-                <div id="MediaFolders"></div>
-                <div id="MediaThumbnails"></div>
-            </div>
-        </div>
-    </div>
-    -->
 
     <div class="tab-pane" role="tabpanel"  id="ContactsPage">
         <div class="m-2">
@@ -420,7 +405,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
                 <h5 class="modal-title">
-                    <img class="rounded float-start m-2" src="Media/images/logo-photo.jpg">
+                    <img class="rounded float-start m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg">
                     Gander Road Homeowners Association
                 </h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
@@ -432,8 +417,8 @@
                 Dayton, OH. This site is intended primarily as a means of communication
                 between the Board of Trustees and the homeowners of the
                 association. <br> 
-                <a href="Media/images/grhamap.jpg" target="_blank">
-                    <img src="Media/images/grhamap.jpg" width="49%" />
+                <a href="https://grhawebstorage.blob.core.windows.net/images/grhamap.jpg" target="_blank">
+                    <img src="https://grhawebstorage.blob.core.windows.net/images/grhamap.jpg" width="49%" />
                 </a>
 
                 <iframe
@@ -453,14 +438,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">
-                    <img class="rounded float-start m-2" src="Media/images/logo-photo.jpg">
+                    <img class="rounded float-start m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg">
                     GRHA Map
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                <a href="Media/images/grhamap.jpg" target="_blank">
-                    <img class="img-fluid" src="Media/images/grhamap.jpg"/>
+                <a href="https://grhawebstorage.blob.core.windows.net/images/grhamap.jpg" target="_blank">
+                    <img class="img-fluid" src="https://grhawebstorage.blob.core.windows.net/images/grhamap.jpg"/>
                 </a>
             </div>
             <div class="modal-footer">
@@ -475,7 +460,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <img class="mr-1" src="Media/images/logo-photo.jpg"> Treasurer info for Realtors and Title Agents
+                        <img class="mr-1" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Treasurer info for Realtors and Title Agents
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -508,17 +493,19 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <img class="mr-1" src="Media/images/logo-photo.jpg"> Monthly Trustee meetings
+                        <img class="mr-1" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Monthly Trustee meetings
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    The GRHA Board of Trustees meets the 2nd Thursday of every month
-                    at 7:00pm at the city of Dayton Fire Station #12 on Brandt Pike (just south of Needmore).
+                    The GRHA Board of Trustees meets the 2nd Thursday of every month at 7:00pm at the <b>Huber Heights Library Conference Room</b>. 
                     This meeting is open to all members of the GRHA.
-                    <a href="https://goo.gl/maps/HbumuiUgeiA6DEnm7" target="_blank">
-                        <b>(Click here for map to Fire Station #12)</b>
-                    </a>
+                    <h6>*** Special Note - Jan. meeting will be at regular 7:00pm, but February meeting will start at 7:30pm</h6>
+                    <p>
+                        <a href="https://www.google.com/maps/place/Dayton+Metro+Library+-+Huber+Heights+Branch/@39.843046,-84.1196126,17z/data=!4m14!1m7!3m6!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!2sDayton+Metro+Library+-+Huber+Heights+Branch!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6!3m5!1s0x883f7d43ef86bd67:0x914d39b2d5b2eab5!8m2!3d39.843046!4d-84.1170377!16s%2Fg%2F1tfl0ww6?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                            <b>(Click here for map to Dayton Metro Library - Huber Heights)</b>
+                        </a>
+                    </p>
                     <h5>Meeting Minutes can be found in the Quail Call newsletter</h5>
                     <!--
                     <h5>*** Due to COVID-19, Public Meetings have been cancelled ***</h5>
@@ -537,7 +524,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">
-                            <img class="mr-1" src="Media/images/logo-photo.jpg"> Events / Calendar
+                            <img class="mr-1" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Events / Calendar
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
@@ -595,7 +582,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">
                         <img style="margin-top: -10px; margin-right: 5px;"
-                            src="Media/images/logo-photo.jpg"> Dues Help Information
+                            src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Dues Help Information
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -633,7 +620,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <img class="m-2" src="Media/images/logo-photo.jpg"> GRHA Dues Statement
+                        <img class="m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> GRHA Dues Statement
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -679,7 +666,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <img class="mr-1" src="Media/images/logo-photo.jpg"> Privacy Policy
+                        <img class="mr-1" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Privacy Policy
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
