--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                 -->
 
                 <div class="float-start d-none d-sm-block my-3">
-                    TEST You have found the web site of the Gander Road Homeowners Association.
+                    TEST JJK You have found the web site of the Gander Road Homeowners Association.
                     Our association is a combination of the subdivisions of Quail Hollow
                     and Willow Glen, located in the northeast corner of Dayton, OH.
                 </div>
