I think the Trustee update is DONE now

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -115,7 +115,7 @@
 									</div>
 								</div>
 								<div class="mb-2">
-									<label for="EmailAddress" class="form-label">Email address</label>
+									<label for="EmailAddress" class="form-label">Public Email address</label>
 									<input  id="EmailAddress" type="email" class="form-control">
 									<div class="valid-feedback">
 										Valid
@@ -125,7 +125,7 @@
 									</div>
 								</div>
 								<div class="mb-2">
-									<label for="EmailAddressForward" class="form-label">Email address</label>
+									<label for="EmailAddressForward" class="form-label">Private Email address</label>
 									<input  id="EmailAddressForward" type="email" class="form-control">
 									<div class="valid-feedback">
 										Valid
